infrastructure/kong/ingress-kong-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.yanatech.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-gateway-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - api-gateway.yanatech.co.uk
      secretName: wildcard-yanatech-tls
